--- a/ports_recycling/pubspec.yaml
+++ b/ports_recycling/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_maps_flutter: ^2.5.3
   google_maps_flutter_web: ^0.5.4+3
+  cloud_firestore: ^4.15.5
+  firebase_core: ^2.25.4
 
 dev_dependencies:
   flutter_test:
