--- a/ports_recycling/pubspec.yaml
+++ b/ports_recycling/pubspec.yaml
@@ -37,8 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_maps_flutter: ^2.5.3
   google_maps_flutter_web: ^0.5.4+3
+  google_maps_webservice: ^0.0.19
   cloud_firestore: ^4.14.0
   firebase_core: ^2.24.2
+
 
 dev_dependencies:
   flutter_test:
@@ -63,9 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/RecyclingPoints.csv
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
