--- a/ports_recycling/pubspec.yaml
+++ b/ports_recycling/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/RecyclingPoints.csv
+    - assets/Materials.csv
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
