--- a/ports_recycling/pubspec.yaml
+++ b/ports_recycling/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   device_info: ^2.0.3
   geocoding: ^3.0.0
   intl: ^0.19.0
+  flutter_local_notifications: ^9.1.2
 
 
 dev_dependencies:
