--- a/ports_recycling/pubspec.yaml
+++ b/ports_recycling/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   geocoding: ^3.0.0
   intl: ^0.19.0
   flutter_local_notifications: ^9.1.2
+  http: ^0.13.6
 
 
 dev_dependencies:
@@ -58,6 +59,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   mockito: ^5.4.4
+  test: ^1.24.9
+  build_runner: ^2.4.9
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
