--- a/ports_recycling/.github/workflows/ci.yml
+++ b/ports_recycling/.github/workflows/ci.yml
@@ -3,6 +3,9 @@ on:
   pull_request:
     branches:
       - main
+      - Alex's-Branch
+      - James'-Branch
+      - Jemima's-Branch
 
 jobs:
   flutter_test:
