--- a/ports_recycling/.github/workflows/ci.yml
+++ b/ports_recycling/.github/workflows/ci.yml
@@ -1,5 +1,11 @@
 name: CI
 on:
+  push:
+    branches:
+      - main
+      - Alex's-Branch
+      - James'-Branch
+      - Jemima's-Branch
   pull_request:
     branches:
       - main
@@ -18,7 +24,7 @@ jobs:
           java-version: '12'
       - uses: subosito/flutter-action@v2
         with:
-          chanel: 'stable'
+          channel: 'stable'
       - run: flutter pub get
       - run: flutter analyze
       - run: flutter test
